# billTotext

./: .gitignore  README.md  api.py  app.py  doubao_asr.py  exAudio.py  index.html  pyproject.toml  requirements.txt  speech2text.py  speech2text_faster.py  test_conversion.py  test_doubao_optimization.py  utils.py  vercel.json  window.py
api/: app.py
bilibili-proxy/: .env.example  .gitignore  README.md  package.json  server-with-wbi.js  server.js
bilibili-proxy/miniprogram/: app.json
bilibili-proxy/miniprogram/pages/index/: index.js  index.wxml  index.wxss
bilibili-proxy/miniprogram/utils/: bilibili.js
web/: index.html
