[tool.vercel.scripts]
app = "app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bili2text"
version = "1.0.0"
description = "B站视频转文字工具"
readme = "README.md"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "requests",
    "websocket-client",
    "moviepy",
    "pydub",
    "faster-whisper",
    "you-get",
    "ffmpeg-python",
    "imageio-ffmpeg"
]
