[tool.vercel.scripts]
app = "app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bili2text"
version = "1.0.0"
description = "B站视频转文字工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "requests",
    "websocket-client",
    "you-get",
    "moviepy",
    "pydub",
    "ffmpeg-python",
    "imageio-ffmpeg",
]
